<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/opt_registrar_entrada"
        android:title="@string/txt_registrar_entrada"
        android:icon="@drawable/ic_registrar_entrada"/>

    <item
        android:id="@+id/opt_registrar_salida"
        android:title="@string/txt_registrar_salida"
        android:icon="@drawable/ic_registrar_salida"/>

    <item
        android:id="@+id/opt_alta_vehiculo_oficial"
        android:title="@string/txt_alta_vehiculo_oficial"
        android:icon="@drawable/ic_alta_vehiculo_oficial"/>

    <item
        android:id="@+id/opt_alta_vehiculo_residente"
        android:title="@string/txt_alta_vehiculo_residente"
        android:icon="@drawable/ic_alta_vehiculo_residente"/>

    <item
        android:id="@+id/opt_comienza_mes"
        android:title="@string/txt_comienza_mes"
        android:icon="@drawable/ic_comienza_mes"/>

    <item
        android:id="@+id/opt_pagos_residentes"
        android:title="@string/txt_pagos_residentes"
        android:icon="@drawable/ic_pagos_residentes"/>
</menu>