<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/opt_home"
    android:id="@+id/drawer_navigation">
    <fragment
        android:id="@+id/opt_home"
        android:name="com.julioalfaro.hugotec.fragments.home.HomeFragment"
        android:label="@string/txt_home"
        android:layout="@layout/fragment_home_layout"/>
    <fragment
        android:id="@+id/opt_registrar_entrada"
        android:name="com.julioalfaro.hugotec.fragments.registrar_entrada.RegistrarEntradaFragment"
        android:label="@string/txt_registrar_entrada"
        tools:layout="@layout/fragment_registrar_entrada_layout"/>
    <fragment
        android:id="@+id/opt_registrar_salida"
        android:name="com.julioalfaro.hugotec.fragments.registrar_salida.RegistrarSalidaFragment"
        android:label="@string/txt_registrar_salida"
        tools:layout="@layout/fragment_registrar_salida_layout"/>
    <fragment
        android:id="@+id/opt_alta_vehiculo_oficial"
        android:name="com.julioalfaro.hugotec.fragments.alta_vehiculo_oficial.AltaVehiculoOficialFragment"
        android:label="@string/txt_alta_vehiculo_oficial"
        tools:layout="@layout/fragment_alta_vehiculo_oficial_layout"/>
    <fragment
        android:id="@+id/opt_alta_vehiculo_residente"
        android:name="com.julioalfaro.hugotec.fragments.alta_vehiculo_residente.AltaVehiculoResidenteFragment"
        android:label="@string/txt_alta_vehiculo_residente"
        tools:layout="@layout/fragment_alta_vehiculo_residente_layout"/>
    <fragment
        android:id="@+id/opt_comienza_mes"
        android:name="com.julioalfaro.hugotec.fragments.comienza_mes.ComienzaMesFragment"
        android:label="@string/txt_comienza_mes"
        tools:layout="@layout/fragment_comienza_mes_layout"/>
    <fragment
        android:id="@+id/opt_pagos_residentes"
        android:name="com.julioalfaro.hugotec.fragments.pagos_residentes.PagosResidentesFragment"
        android:label="@string/txt_pagos_residentes"
        tools:layout="@layout/fragment_pagos_residentes_layout"/>
</navigation>