<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/fragment_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registrar_entrada"
            android:textSize="22sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_registrar_entrada_explicacion"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/txt_ingrese_placa"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/txt_placa_entrada"/>
        <Button
            android:id="@+id/btn_grabar_vehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:textColor="#000000"
            android:background="@drawable/button_background"
            android:text="@string/txt_btn_grabar_vehiculo"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>